# solana-token-extension-wrap

./: Anchor.toml  package.json
programs/solana-token-extension-wrapper/: Cargo.toml
programs/solana-token-extension-wrapper/src/: lib.rs
tests/: confidentialTokenClient.ts  solana-token-extension-wrapper.ts  util.ts
